missing callback parameter

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
