use not min version of scripts

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.min.js"></script>
-<!-- <script async defer
+<script src="js/scripts.js"></script>
+<script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap"></script> -->
-<!-- Google Analytics -->
+<!-- Google Analytics
 <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
