Open Gmaps button

--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
-                                map</a>
+                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Obre mapa</a>
+                        </div>
+                        <div class="col-md-6" style="padding: 5px;">
+                            <a class="btn btn-accent btn-small" href="https://goo.gl/maps/tutjvNcTcg9GBMep8" target="_blank"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Obrir a Google Maps</a>
                         </div>
                     </div>
                 </div>
