--- a/index.html
+++ b/index.html
@@ -234,7 +234,18 @@
                             </div>
                         </div>
 
+                    
+
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="allergies" class=""
+                                                                placeholder="Alèrgies i intoleràncies"
+                                                                 lng-tag="allergies">
+                            </div>
+                        </div>
+
                     </div>
+
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
