--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
     </div>
 </section>
 
+<section class="rsvp text-center" id="presents">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h3 lng-tag="presents">Regals</h3>
+                <p lng-tag="presents_text">La vostra companyia és el millor regal que ens podeu fer, però si tot i així ens en voleu fer algun altre agrairïem que fos una ajuda per les despeses del casament (fa molts anys que vivim junts i tenim de tot XD). </p>
+                <p lng-tag="iban_text">Si ho voleu fer en forma de transferència, aquí teniu l'IBAN:</p>
+                <p ><b lng-tag="iban">ES04 2100 3153 5422 0063 7125</b></p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 <section class="rsvp text-center" id="rsvp">
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -191,8 +205,8 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <div class="section-padding">
-                        <h3 lng-tag="location" lng-tag="thanks">Gràcies!</h3>
-                        <p lng-tag="location" lng-tag="email">Ens alegrem que puguis compartr amb nosaltres el nostre dia</p>
+                        <h3 lng-tag="thanks">Gràcies!</h3>
+                        <p lng-tag="email">Ens alegrem que puguis compartr amb nosaltres el nostre dia</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
