--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login" lng-tag="location">Ubicació</a></li>
+                            <li><a href="#presents" class="login" lng-tag="presents">Regals</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small" lng-tag="rvsp">Confirmar assistència</a></li>
                             <li class="nav-item">
                                 <a class="nav-link js-scroll-trigger lng" id="caTranslator" href="javascript:void(0);">CA</a>
