--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
-                    <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
-                    <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
+                    <img src="img/logo-lg.png" class="img-desktop">
+                </div>
+                <div class="hero-content text-center">
+                    <img src="img/logo-lg-mbl.png" class="img-mobile">
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
     </div>
 </section>
 
-<section class="rsvp text-center" id="presents">
+<section class="presents text-center" id="presents">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
