--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 <section class="schedule section-padding" id="schedule">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="text-center">
                 <h3 class="header" lng-tag="program">Programa</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="text-center events">
                 <div class="wp3">
                     <h5> <span lng-tag="ceremony">Cerimònia</span> <span class="time">12:30 - 13:30</span></h5>
                 </div>
@@ -121,7 +121,7 @@
                     <h5 > <spanlng-tag="party">Festa!</span> <span class="time">19:30 - 22:30</span></h5>
                 </div>
                 <div class="wp5">
-                    <h5 > <spanlng-tag="goodbye">Comiat i sortida d'autocars</span> <span class="time">22:30 - 23:00</span></h5>
+                    <h5 > <spanlng-tag="goodbye">Comiat</span> <span class="time">22:30 - 23:00</span></h5>
                 </div>
             </div>
         </div>
@@ -259,7 +259,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p><span class="fa fa-heart pulse2"></span></p>
             </div>
         </div>
     </div>
