Content changes and fixes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Ens casem!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Ens casem!">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -47,7 +47,6 @@
                     <nav>
                         <ul class="primary-nav">
                             <li><a href="#schedule" lng-tag="program">Programa</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login" lng-tag="location">Ubicació</a></li>
@@ -71,10 +70,10 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
-                    <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
-                    <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
+                    <img src="img/logo-lg.png" class="img-desktop">
+                </div>
+                <div class="hero-content text-center">
+                    <img src="img/logo-lg-mbl.png" class="img-mobile">
                 </div>
             </div>
         </div>
@@ -94,7 +93,6 @@
             <div class="col-md-12 text-center">
                 <h3 lng-tag="marry">Ens casem!</h3>
                 <p lng-tag="when">Serà el 22 d'Abril i volem que en formis part</p>
-                <div class="share-bar"></div>
             </div>
         </div>
     </div>
@@ -103,12 +101,12 @@
 <section class="schedule section-padding" id="schedule">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="text-center">
                 <h3 class="header" lng-tag="program">Programa</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="text-center events">
                 <div class="wp3">
                     <h5> <span lng-tag="ceremony">Cerimònia</span> <span class="time">12:30 - 13:30</span></h5>
                 </div>
@@ -122,31 +120,12 @@
                     <h5 > <spanlng-tag="party">Festa!</span> <span class="time">19:30 - 22:30</span></h5>
                 </div>
                 <div class="wp5">
-                    <h5 > <spanlng-tag="goodbye">Comiat i sortida d'autocars</span> <span class="time">22:30 - 23:00</span></h5>
+                    <h5 > <spanlng-tag="goodbye">Comiat</span> <span class="time">22:30 - 23:00</span></h5>
                 </div>
             </div>
         </div>
 
 </section>
-
-<section id="instagram" class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3>Una imatge val més que mil paraules!</h3>
-                <p>Ajudan's a capturar els millors moments, fer servir el hashtag 
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
-                </p>
-            </div>
-        </div>
-        <div class="row section-border wp7">
-            <div class="col-md-4 col-md-offset-4">
-                <img src="img/iphone_instagram.jpg">
-            </div>
-        </div>
-    </div>
-</section>
-
 
 <section id="map" class="section-padding">
     <div class="text-center">
@@ -183,7 +162,7 @@
     </div>
 </section>
 
-<section class="rsvp text-center" id="presents">
+<section class="presents text-center" id="presents">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -279,7 +258,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p><span class="fa fa-heart pulse2"></span></p>
             </div>
         </div>
     </div>
