--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
                     <nav>
                         <ul class="primary-nav">
                             <li><a href="#schedule" lng-tag="program">Programa</a></li>
-                        </ul>
-                        <ul class="member-actions">
                             <li><a href="#map" class="login" lng-tag="location">Ubicació</a></li>
                             <li><a href="#presents" class="login" lng-tag="presents">Regals</a></li>
+                        </ul>
+                        <ul class="member-actions">
+
                             <li><a href="#rsvp" class="btn-white btn-small" lng-tag="rvsp">Confirmar assistència</a></li>
                             <li class="nav-item">
                                 <a class="nav-link js-scroll-trigger lng" id="caTranslator" href="javascript:void(0);">CA</a>
@@ -107,16 +108,16 @@
         </div>
         <div class="row">
             <div class="text-center events">
-                <div class="wp3">
+                <div class="wp1">
                     <h5> <span lng-tag="ceremony">Cerimònia</span> <span class="time">12:30 - 13:30</span></h5>
                 </div>
-                <div class="wp5">
+                <div class="wp2">
                     <h5 > <span lng-tag="aperitive">Aperitiu</span> <span class="time">14:30 - 16:30</span></h5>
                 </div>
-                <div class="wp5">
+                <div class="wp3">
                     <h5 > <span lng-tag="banquet">Banquet</span> <span class="time">16:30 - 19:30</span></h5>
                 </div>
-                <div class="wp5">
+                <div class="wp4">
                     <h5 > <span lng-tag="party">Festa!</span> <span class="time">19:30 - 22:30</span></h5>
                 </div>
                 <div class="wp5">
@@ -169,7 +170,7 @@
                 <h3 lng-tag="presents">Regals</h3>
                 <p lng-tag="presents_text">La vostra companyia és el millor regal que ens podeu fer, però si tot i així ens en voleu fer algun altre agrairïem que fos una ajuda per les despeses del casament (fa molts anys que vivim junts i tenim de tot XD). </p>
                 <p lng-tag="iban_text">Si ho voleu fer en forma de transferència, aquí teniu l'IBAN:</p>
-                <p ><b lng-tag="iban">ES04 2100 3153 5422 0063 7125</b></p>
+                <p class="wp6"><b>ES04 2100 3153 5422 0063 7125</b></p>
             </div>
         </div>
     </div>
@@ -282,7 +283,7 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.min.js"></script>
 <script src="js/translate.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap&libraries=places"></script> -->
