Adjustments in forms

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="https://kit.fontawesome.com/0960316077.js" crossorigin="anonymous"></script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
-<body id="top" onload="translate('ca','lng-tag')">
+<body id="top">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
@@ -187,7 +187,7 @@
                     </button>
                     <div class="section-padding">
                         <h3 lng-tag="thanks">Gràcies!</h3>
-                        <p lng-tag="email">Ens alegrem que puguis compartr amb nosaltres el nostre dia</p>
+                        <p lng-tag="happy">Ens alegrem que puguis compartr amb nosaltres el nostre dia</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         </div>
 
                     </div>
-
+                    <input type="hidden" name="lang" id="formLang"/>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
@@ -283,8 +283,8 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="node_modules/waypoints/lib/jquery.waypoints.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.min.js"></script>
-<script src="js/translate.js"></script>
+<script src="js/scripts.js"></script>
+<script src="js/translate.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap&libraries=places"></script> -->
 <!-- Google Analytics
