--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="hero-content text-center">
-                    <img src="img/logo-lg.png" class="img-desktop">
+                <div class="hero-content text-center img-desktop">
+                    <img src="img/logo-lg.png">
                 </div>
-                <div class="hero-content text-center">
-                    <img src="img/logo-lg-mbl.png" class="img-mobile">
+                <div class="hero-content text-center img-mobile">
+                    <img src="img/logo-lg-mbl.png">
                 </div>
             </div>
         </div>
