--- a/index.html
+++ b/index.html
@@ -264,6 +264,42 @@
     </div>
 </section>
 
+<section class="rsvp text-center" id="music">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h3 lng-tag="music">Què vols ballar?</h3>
+                <p lng-tag="music_text">Si t'agradaria que sonés alguna cançó o artista a la festa digue'ns-ho, intentarem que ho punxin</p>
+                <form id="music-form" class="rsvp-form"
+                      action=""
+                      method="POST">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-music"></i><input name="song" class=""
+                                                                     placeholder="Cançó"
+                                                                     required lng-tag="song">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <button class="btn-fill rsvp-btn" lng-tag="play">
+                                Posa-la!
+                            </button>
+                        </div>
+                    </div>
+ 
+                    <input type="hidden" name="lang" id="musicLang"/>
+                    <div class="row">
+                        <div class="col-md-12" id="alert-wrapper-music"></div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer>
     <div class="container">
         <div class="row">
@@ -286,7 +322,7 @@
 <script src="js/scripts.min.js"></script>
 <script src="js/translate.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap&libraries=places"></script> -->
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9SzbfxgogMAL6XA6BJCtLizZqJr0niXI&callback=initMap&libraries=places"></script>
 <!-- Google Analytics
 <script>
     (function (i, s, o, g, r, a, m) {
