--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#schedule" lng-tag="program">Programa</a></li>
+                            <li><a href="#schedule" class="login" lng-tag="program">Programa</a></li>
                             <li><a href="#map" class="login" lng-tag="location">Ubicació</a></li>
                             <li><a href="#presents" class="login" lng-tag="presents">Regals</a></li>
                         </ul>
                         <ul class="member-actions">
 
-                            <li><a href="#rsvp" class="btn-white btn-small" lng-tag="rvsp">Confirmar assistència</a></li>
+                            <li><a href="#rsvp" class="login btn-white btn-small" lng-tag="rvsp">Confirmar assistència</a></li>
                             <li class="nav-item">
                                 <a class="nav-link js-scroll-trigger lng" id="caTranslator" href="javascript:void(0);">CA</a>
                                 <a class="nav-link js-scroll-trigger lng" id="esTranslator" href="javascript:void(0);" style="margin-left:5px;">ES</a>
